<resources>
    <string name="app_name">My Crypto Binder</string>
    <string name="action_refresh">Refresh</string>
    <string name="btn_backup">Backup</string>
    <string name="btn_restore">Restore</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_synchronize">Synchronize</string>
    <string name="btn_select">Select</string>
    <string name="btn_create_currency">Create currency</string>
    <string name="btn_create_exchange">Create exchange</string>
    <string name="btn_update_currency">Update currency</string>
    <string name="btn_update_exchange">Update exchange</string>
    <string name="btn_add_currency">Add currency</string>
    <string name="btn_add_exchange">Add exchange</string>
    <string name="btn_create_transaction">Create transaction</string>
    <string name="btn_update_transaction">Update transaction</string>
    <string name="btn_create_ico">Add new ICO</string>
    <string name="btn_update_ico">Update ICO</string>
    <string name="btn_create_app_setting">Add application setting</string>
    <string name="btn_update_app_setting">Update application setting</string>
    <string name="img_btn_delete_currency_desc">Delete this currency</string>
    <string name="img_btn_delete_exchange_desc">Delete this exchange</string>
    <string name="confirm_delete_currency">Are you sure you want to delete currency <b>%1$s</b></string>
    <string name="confirm_delete_exchange">Are you sure you want to delete exchange <b>%1$s</b></string>
    <string name="confirm_delete_file">Are you sure you want to delete file <b>%1$s</b></string>
    <string name="error_setting_name_required">Setting name is required!</string>
    <string name="error_setting_value_required">Setting value is required!</string>
    <string name="error_currency_name_required">Currency name is required!</string>
    <string name="error_currency_iso_code_required">ISO code is required!</string>
    <string name="error_exchange_name_required">Exchange name is required!</string>
    <string name="error_ico_id_invalid">ICO id is invalid!</string>
    <string name="error_ico_name_required">ICO name is required!</string>
    <string name="error_ico_currency_required">Currency is required!</string>
    <string name="error_ico_amount_required">Amount is required!</string>
    <string name="error_ico_amount_not_valid">Amount is invalid!</string>
    <string name="error_ico_date_required">Date is required!</string>
    <string name="error_ico_date_not_valid">Date is invalid!</string>
    <string name="error_ico_token_name_required">Token name is required!</string>
    <string name="error_ico_token_date_required">Token date is required!</string>
    <string name="error_ico_token_date_invalid">Token date is invalid!</string>
    <string name="error_ico_token_quantity_required">Token quantity is required!</string>
    <string name="error_ico_token_quantity_invalid">Token quantity is invalid!</string>
    <string name="error_ico_fee_required">Fee is required!</string>
    <string name="error_ico_fee_invalid">Fee is invalid!</string>
    <string name="error_ico_bonus_required">Bonus is required!</string>
    <string name="error_ico_bonus_invalid">Bonus is invalid!</string>
    <string name="error_transaction_currency1_required">Currency1 is required!</string>
    <string name="error_transaction_currency2_required">Currency2 is required!</string>
    <string name="error_transaction_exchange_required">Exchange is required!</string>
    <string name="error_transaction_id_required">Transaction ID is required!</string>
    <string name="error_transaction_quantity_required">Quantity is required!</string>
    <string name="error_transaction_quantity_not_valid">Quantity is invalid!</string>
    <string name="error_transaction_price_required">Price is required!</string>
    <string name="error_transaction_price_not_valid">Price is invalid!</string>
    <string name="error_transaction_fee_required">Fee is required!</string>
    <string name="error_transaction_fee_not_valid">Fee is invalid!</string>
    <string name="error_transaction_total_required">Total is required!</string>
    <string name="error_transaction_total_not_valid">Total is invalid!</string>
    <string name="error_transaction_type_required">Type is required!</string>
    <string name="error_service_call_returned_null">An error occurred when retrieving data from API, service call returned null</string>
    <string name="error_retrieving_data_from_api">An error occurred when retrieving data from API : %1$s</string>
    <string name="error_retrieving_price_full">Error occurred when retrieving pricemultifull from cryptoCompare API : %1$s</string>
    <string name="error_retrieving_historical_day_price">Error occurred when retrieving histoday from cryptoCompare API : %1$s</string>
    <string name="error_api_keys_not_defined_fro_exchange">API keys have not been defined for %1$s exchange</string>
    <string name="error_backup_file_name_not_specified">You must specify a name for the backup file</string>
    <string name="error_delete_file">An error occurred when trying to delete file %1$s</string>
    <string name="error_must_select_file">You must select a file</string>
    <string name="error_write_external_storage_permission_refused">You cannot use this functionality if you don\'t allow the application to write to the device external storage</string>
    <string name="hint_file_name">File name</string>
    <string name="hint_currency_name">ex. Euro</string>
    <string name="hint_currency_iso_code">ex. EUR</string>
    <string name="hint_currency_symbol">ex. €</string>
    <string name="hint_exchange_name">Name</string>
    <string name="hint_exchange_link">Website</string>
    <string name="hint_exchange_description">Description</string>
    <string name="hint_exchange_api_public_key">API public key</string>
    <string name="hint_exchange_api_private_key">API private key</string>
    <string name="hint_app_setting_name">ex. kraken_api_key</string>
    <string name="hint_app_setting_value">ex. aaaa-bbbb-cccc-dddd</string>
    <string name="label_deposit_short">Dep</string>
    <string name="label_withdrawal_short">Wdrl</string>
    <string name="label_type">Type</string>
    <string name="label_buy">Buy</string>
    <string name="label_sell">Sell</string>
    <string name="label_send">Send</string>
    <string name="label_with">With</string>
    <string name="label_for">For</string>
    <string name="label_yes">Yes</string>
    <string name="label_no">No</string>
    <string name="label_currency">Currency</string>
    <string name="label_exchange">Exchange</string>
    <string name="label_transaction_id">Transaction id</string>
    <string name="label_quantity">Quantity</string>
    <string name="label_total">Total</string>
    <string name="label_price">Price</string>
    <string name="label_fees">Fees</string>
    <string name="label_date">Date</string>
    <string name="label_comment">Comment</string>
    <string name="label_euro_price">€ %1$s</string>
    <string name="label_percentage">%1$s%%</string>
    <string name="label_currency_name">Name</string>
    <string name="label_currency_iso_code">ISO code</string>
    <string name="label_currency_symbol">Symbol</string>
    <string name="label_exchange_name">Name</string>
    <string name="label_exchange_link">Link</string>
    <string name="label_exchange_description">Description</string>
    <string name="label_exchange_api_public_key">API public key</string>
    <string name="label_exchange_api_private_key">API private key</string>
    <string name="label_menu_item_currencies">Currencies</string>
    <string name="label_menu_item_exchanges">Exchanges</string>
    <string name="label_menu_item_app_setting">AppSetting</string>
    <string name="label_menu_item_synchronize_with_exchanges">Synchronize with exchanges</string>
    <string name="label_menu_item_backup_restore">Backup / restore</string>
    <string name="label_exchange_name_kraken">Kraken</string>
    <string name="label_exchange_name_poloniex">Poloniex</string>
    <string name="label_exchange_name_bittrex">Bittrex</string>
    <string name="label_exchange_name_bitfinex">Bitfinex</string>
    <string name="label_app_setting_name">Name</string>
    <string name="label_app_setting_value">Value</string>
    <string name="label_app_setting_header_name">NAME</string>
    <string name="label_app_setting_header_value">VALUE</string>
    <string name="label_all">All</string>
    <string name="label_transaction_pair">%1$s/%2$s</string>
    <string name="label_one_day">1 day</string>
    <string name="label_seven_days">7 days</string>
    <string name="label_fifteen_days">15 days</string>
    <string name="label_one_month">1 month</string>
    <string name="label_two_months">2 months</string>
    <string name="label_three_months">3 months</string>
    <string name="label_six_months">6 months</string>
    <string name="label_one_year">1 year</string>
    <string name="label_1d">1D</string>
    <string name="label_1w">1W</string>
    <string name="label_2w">2W</string>
    <string name="label_1m">1M</string>
    <string name="label_2m">2M</string>
    <string name="label_3m">3M</string>
    <string name="label_6m">6M</string>
    <string name="label_1y">1Y</string>
    <string name="label_price_history">price history</string>
    <string name="label_ico_header_name">Name</string>
    <string name="label_ico_header_date">Date</string>
    <string name="label_ico_header_quantity">Investment</string>
    <string name="label_ico_name">Name</string>
    <string name="label_ico_amount">Amount</string>
    <string name="label_ico_currency">Currency</string>
    <string name="label_ico_date">Date</string>
    <string name="label_ico_token_name">Token name</string>
    <string name="label_ico_token_date">Token date</string>
    <string name="label_ico_token_quantity">Token quantity</string>
    <string name="label_ico_fee">Fee</string>
    <string name="label_ico_bonus">Bonus</string>
    <string name="label_ico_comment">Comment</string>
    <string name="label_select_exchanges">Select exchanges</string>
    <string name="label_perform_clean_import">Perform clean import</string>
    <string name="message_choose_file_name_for_backup">Choose a file name then click the "Backup" button below to save the file (CSV format)</string>
    <string name="message_select_file_to_restore">Select in the list below the file you want to restore, then click the "Restore" button. WARNING : this will remove any existing data!</string>
    <string name="message_synchronize_exchanges_intro">Use this functionality to synchronize your data with online exchanges. Please note that you must have provided your private and public API key in the \'Exchanges\' setting menu for the exchanges you want to synchronize.</string>
    <string name="message_external_storage_permission_needed">For the application to be able to write the backup file to the device external storage, you need to accept the requested permission afterwards. If you refuse it, you will not be able to use that functionality</string>
    <string name="success_app_setting_created">Application setting %1$s has been created</string>
    <string name="success_currency_created">Currency %1$s has been created</string>
    <string name="success_exchange_created">Exchange %1$s has been created</string>
    <string name="success_ico_created">ICO %1$s has been created</string>
    <string name="success_ico_updated">ICO %1$s has been updated</string>
    <string name="success_transaction_created">Transaction %1$s has been created</string>
    <string name="success_currency_removed">Currency %1$s has been removed</string>
    <string name="success_currency_updated">Currency %1$s has been updated</string>
    <string name="success_exchange_updated">Exchange %1$s has been updated</string>
    <string name="success_transaction_updated">Transaction %1$s has been updated</string>
</resources>