<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.mycryptobinder.activities.AddCurrencyActivity">

    <include layout="@layout/appbar" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <TextView
            android:id="@+id/add_currency_name_textView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="start|center"
            android:text="@string/label_currency_name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/add_currency_name_editText"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/add_currency_guideline"
            app:layout_constraintTop_toTopOf="@+id/add_currency_name_editText" />

        <EditText
            android:id="@+id/add_currency_name_editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_currency_name"
            android:textColor="@color/white"
            app:layout_constraintLeft_toRightOf="@+id/add_currency_guideline"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:inputType="text" />

        <TextView
            android:id="@+id/add_currency_iso_code_textView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="start|center"
            android:text="@string/label_currency_iso_code"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/add_currency_iso_code_editText"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/add_currency_guideline"
            app:layout_constraintTop_toTopOf="@+id/add_currency_iso_code_editText" />

        <EditText
            android:id="@+id/add_currency_iso_code_editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_currency_iso_code"
            app:layout_constraintLeft_toRightOf="@+id/add_currency_guideline"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_currency_name_editText"
            android:inputType="text" />

        <TextView
            android:id="@+id/add_currency_symbol_textView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="start|center"
            android:text="@string/label_currency_symbol"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/add_currency_symbol_editText"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/add_currency_guideline"
            app:layout_constraintTop_toTopOf="@+id/add_currency_symbol_editText" />

        <EditText
            android:id="@+id/add_currency_symbol_editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_currency_symbol"
            android:textColor="@color/white"
            app:layout_constraintLeft_toRightOf="@+id/add_currency_guideline"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_currency_iso_code_editText"
            android:inputType="text" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_currency_symbol_editText">

            <Button
                android:id="@+id/btn_create_currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/custom_button"
                android:text="@string/btn_create_currency"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_update_currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/custom_button"
                android:text="@string/btn_update_currency"
                android:textColor="@color/white"
                android:visibility="invisible" />

        </FrameLayout>

        <android.support.constraint.Guideline
            android:id="@+id/add_currency_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.3" />

    </android.support.constraint.ConstraintLayout>

</LinearLayout>